--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10655,8 +10655,28 @@ a.text-dark:focus {
   }
 }
 
-.navbar-laravel {
-  background-color: #fff;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
+.header {
+  background-color: #3d55a7;
+  color: #eee;
+  margin-bottom: 1.5rem;
+}
+
+.main-nav {
+  display: flex;
+  justify-content: center;
+  padding: 1rem;
+}
+
+.main-nav li {
+  margin-left: 1.5rem;
+  font-size: 1.2rem;
+  list-style: none;
+  cursor: pointer;
+}
+
+.active-route {
+  background-color: rgba(75, 75, 75, 0.92);
+  padding: 0.5rem;
+  border-radius: 30px;
 }
 
